adding main to run & update controller for traffic endpoint API
